fix(style): :lipstick: adds overflow-x: hidden

--- a/src/css/components/renderProjects.css
+++ b/src/css/components/renderProjects.css
@@ -75,7 +75,7 @@
     flex-wrap: wrap;
     align-items: center;
     height: auto;
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
     /* overflow-x: hidden; */
 
   }
